# noir-oracles

./: .env  .env.example  Cargo.toml  README.md
src/: main.rs  redis.rs  rpc_methods.rs  server.rs  types.rs
src/middleware/: logger.rs
src/query_builder/: mod.rs
