[package]
name = "noir-oracles"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpc-core = "18.0.0"
jsonrpc-http-server = "18.0.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.41.1", features = ["full"] }
